2001-06-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextiter.c (gtk_text_iter_order): rename from 
	gtk_text_iter_reorder

2001-06-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktoolbar.c (gtk_toolbar_remove_space): new function

2001-06-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_set_range): clamp the value 
	to the range that was set

	* gtk/gtkrange.c: add value_changed signal, primarily 
	intended for use with GtkScale
	(gtk_range_set_increments): new function
	(gtk_range_set_range): new function with weird name
	(gtk_range_set_value): new function
	(gtk_range_get_value): new function

	* gtk/gtkspinbutton.c (gtk_spin_button_get_value): rename 
	from gtk_spin_button_get_value_as_float(). Compat #define
	added for get_value_as_float.

	* gtk/gtkhscale.c (gtk_hscale_new_with_range): new function

	* gtk/gtkvscale.c (gtk_vscale_new_with_range): new function

Tue Jun  5 14:57:18 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_get_size): Fix bug #55573

Mon Jun  4 12:41:25 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.h: Deprecate gtk_widget_set().

	* tests/testgtk.c (create_tooltips): Remove usage of
	gtk_widget_set().

2001-06-05  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkcolorsel.c: Use new mnemonic convenience functions

	Applying patch from Jeff Franks, with function docs added.
	
	* gtk/gtkcheckbutton.c (gtk_check_button_new_with_mnemonic):
	remove call to set_mnemonic_widget, change docs a bit.	

	* gtk/gtkimagemenuitem.c (gtk_image_menu_item_new_with_mnemonic):
	new function

	* gtk/gtkcheckmenuitem.c (gtk_check_menu_item_new_with_mnemonic):
	new function

	* gtk/gtkmenuitem.c (gtk_menu_item_new_with_mnemonic): new function

	* gtk/gtkradiobutton.c (gtk_radio_button_new_with_mnemonic): new
	function
	(gtk_radio_button_new_with_mnemonic_from_widget): new function

	* gtk/gtkradiomenuitem.c (gtk_radio_menu_item_new_with_mnemonic):
	new function
